Archive2/a5/e581d4d6448d5e/output
main.cpp: In function 'int main()':
main.cpp:9:30: error: use of deleted function 'C::C(const C&)'
     constexpr C arr[] = {1, 2};
                              ^
main.cpp:4:9: note: declared here
         C(const C&) = delete;
         ^
main.cpp:9:30: error: use of deleted function 'C::C(const C&)'
     constexpr C arr[] = {1, 2};
                              ^
main.cpp:4:9: note: declared here
         C(const C&) = delete;
         ^
